V2_Compiladores/bin/javacc/Calculator.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */
options
{
  static = true;
}

PARSER_BEGIN(Calculator)
package javacc;

public class Calculator
{
  public static void main(String args []) throws ParseException
  {
    Calculator parser = new Calculator(System.in);
    while (true)
    {
      System.out.println("Reading from standard input...");
      System.out.print("Enter an expression like \"1+(2+3)*4;\" :");
      try
      {
        switch (Calculator.one_line())
        {
          case 0 : 
          System.out.println("OK.");
          break;
          case 1 : 
          System.out.println("Goodbye.");
          break;
          default : 
          break;
        }
      }
      catch (Exception e)
      {
        System.out.println("NOK.");
        System.out.println(e.getMessage());
        Calculator.ReInit(System.in);
      }
      catch (Error e)
      {
        System.out.println("Oops.");
        System.out.println(e.getMessage());
        break;
      }
    }
  }
}

PARSER_END(Calculator)

SKIP :
{
  " "
| "\r"
| "\t"
| "\n"
}

TOKEN : /* OPERATORS */
{
  < PLUS : "+" >
| < MINUS : "-" >
| < MULTIPLY : "*" >
| < DIVIDE : "/" >
| < EXP : "^" >
| < RAD : "//" >
| < PARENTHESIS_LEFT : "(" >
| < PARENTHESIS_RIGHT : ")" >
| < BRACKET_LEFT : "[" >
| < BRACKET_RIGHT : "]" >
| < KEY_LEFT : "{" >
| < KEY_RIGHT : "}" >
}

TOKEN :
{
  < CONSTANT :
    < DIGIT >
  | < DIGIT > "." < DIGIT >
  | < DIGIT > "."
  | "." < DIGIT > >
  | < #DIGIT : [ "0"-"9" ] >
}

int one_line() :
{}
{
  sum() ";"
  {
    return 0;
  }
| ";"
  {
    return 1;
  }
}

void sum() :
{}
{
  term()
  (
    (
      < PLUS >
    | < MINUS >
    )
    term()
  )*
}

void term() :
{}
{
  unary()
  (
    (
      < MULTIPLY >
    | < DIVIDE >
    | < EXP >
    | < RAD >
    )
    unary()
  )*
}

void unary() :
{}
{
  < MINUS > element()
| element()
}

void element() :
{}
{
  < CONSTANT >
| < PARENTHESIS_LEFT > sum() < PARENTHESIS_RIGHT >
| < BRACKET_LEFT > open() < PARENTHESIS_LEFT > sum() < PARENTHESIS_RIGHT > close() < BRACKET_RIGHT >
| < KEY_LEFT > open() < BRACKET_LEFT > open() < PARENTHESIS_LEFT > sum() < PARENTHESIS_RIGHT > close() < BRACKET_RIGHT > close() < KEY_RIGHT >
}

void open() :
{}
{
  (
    < CONSTANT >
    (
      < PLUS >
    | < MINUS >
    | < MULTIPLY >
    | < DIVIDE >
    )*
  )*
| < CONSTANT >
}

void close() :
{}
{
  (
    < PLUS > sum()
  | < MINUS > sum()
  | < MULTIPLY > sum()
  | < DIVIDE > sum()
  )*
}

//[2+(2+2)];
//(2+[2+2]);
//1+2+{3**4+[(3-2)]}
